--- a/platforms/html5/src/styles/summary.scss
+++ b/platforms/html5/src/styles/summary.scss
@@ -1,11 +1,27 @@
 $smallScreenHeight: 530px;
 
-.swag-summary {
-  position: fixed;
+body.swag-summary-open {
+  touch-action: none;
+  overflow: hidden;
+}
+
+#swag-summary-root {
+  position: absolute;
   top: 0;
   left: 0;
-  width: 100svw;
-  height: 100svh;
+  z-index: 1;
+  pointer-events: none;
+  
+  .swag-summary {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100svw;
+    height: 100svh;
+  }
+}
+
+.swag-summary {
   display: flex;
   text-align: center;
 }
@@ -16,6 +32,7 @@ $smallScreenHeight: 530px;
   padding: 1rem;
   margin: auto;
   box-sizing: border-box;
+  pointer-events: auto;
 
   h4 {
     font-size: 125%;
@@ -138,38 +155,6 @@ $smallScreenHeight: 530px;
   margin-top: 0;
 }
 
-.swag-summary__related-games {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 0;
-  margin-bottom: 0;
-
-  li {
-    box-sizing: border-box;
-    padding: 0 0.75rem;
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    width: 100%;
-    max-width: 320px;
-    height: 67px;
-
-    + li {
-      margin-top: 1rem;
-    }
-  }
-
-  img {
-    max-height: 48px;
-    height: auto;
-    width: 48px;
-    display: block;
-    margin-right: 0.75rem;
-  }
-}
-
 .swag-summary__promo-links {
   display: flex;
   flex-direction: column;
@@ -194,7 +179,7 @@ $smallScreenHeight: 530px;
     }
   }
 
-  // hide everything except the first button on small displays
+  // Hide everything except the first button on small displays
   @media screen and (max-height: $smallScreenHeight) {
     li:not(:first-child) {
       display: none;
