--- a/platforms/html5/src/styles/summary.theme.scss
+++ b/platforms/html5/src/styles/summary.theme.scss
@@ -16,8 +16,7 @@
   box-shadow: 0 0 0 1px var(--swag-btn-border-color) inset;
 }
 
-.swag-summary__promo-links,
-.swag-summary__related-games {
+.swag-summary__promo-links {
   li {
     color: var(--swag-btn-font-color);
     background-color: #000;
